--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "memepop",
-  "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "client": "yarn workspace client start",
-    "server": "yarn workspace server server"
+    "server": "nodemon ./src/index.js"
   },
-  "contributors": [
-    {
-      "name": "Hayk"
-    }
+  "type": "commonjs",
+  "keywords": [
+    "node.js"
   ],
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "client": "1.0.0",
@@ -25,7 +24,6 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.14",
-    "react-router-dom": "^5.3.0",
     "validator": "^13.6.0"
   }
 }
