--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
+    "redux-thunk": "^2.4.0",
     "sass": "^1.43.3",
     "web-vitals": "^1.0.1"
   },
