--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.14",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "validator": "^13.6.0"
   }
