feat: upload meme image functionality added

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,6 @@ REACT_APP_FIREBASE__STORAGE_BUCKET=memespop-9da01.appspot.com
 REACT_APP_FIREBASE_SENDER_ID=1086744210549
 REACT_APP_FIREBASE_APP_ID=1:1086744210549:web:f15372c70693bc1341dc3c
 REACT_APP_API_BASE_URL=http://localhost:4000
+REACT_APP_CLOUDINARY_CLOUD_NAME=dujnp9btx
+REACT_APP_CLOUDINARY_IMAGES_PRESET=ml_default
+REACT_APP_CLOUDINARY_IMAGES_API=https://api.cloudinary.com/v1_1/dujnp9btx/image/upload
